--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html>
 <head>
   <title>Thermostat</title>
+  <link href='css/style.css' rel='stylesheet'>
 </head>
 <body>
   <section>
-    <h1 id="temperature"></h1>
+    <h1 id="temperature">some text</h1>
     <p>
       <button id="temperature-up">+</button>
-      <button id="temperature-down">-</button>
-      <button id="temperature-reset">reset</button>
-      power saving mode is <span id="power-saving-status">on</span>
+      <button id="temperature-down">-</button><br>
+      <button id="temperature-reset">reset</button><br>
+      power saving mode is <span id="power-saving-status">on</span><br>
       <button id="powersaving-on">PSM on</button>
       <button id="powersaving-off">PSM off</button>
     </p>
   </section>
-  <script src="js/thermostat.js"></script>
+  <script src="src/thermostat.js"></script>
+  <script src="src/jquery.min.js"></script>
+  <script src="src/interface.js"></script>
 </body>
 </html>
