Implemented current city temperature using Open Weather API

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
   <section>
-    <h1 id="temperature">some text</h1>
+    <h1>Current temperature: <span id="current-temperature"></span></h1>
+    <select id='current-city'>
+      <option value='London'>London</option>
+      <option value='Tokyo'>Tokyo</option>
+      <option value='Bucharest'>Bucharest</option>
+      <option value='Prague'>Prague</option>
+      <option value='Vilnius'>Vilnius</option>
+    </select>
+    <h2 id="temperature">Some text</h2>
     <p>
       <button id="temperature-up">+</button>
       <button id="temperature-down">-</button><br>
