showing temperature from remote API

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <!-- <section> -->
+  <div id = "test">
+    test
+  </div>
     <header>
     <h1>Current temperature: <span id="current-temperature"></span></h1>
   </header>
